--- a/.github/workflows/update_md.yml
+++ b/.github/workflows/update_md.yml
@@ -1,6 +1,12 @@
 name: "Update markdown files"
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   update_markdown_documentation:
@@ -30,4 +36,4 @@ jobs:
 
       - name: "Ensure embedmd & structmd found no changes"
         run: |
-          git diff --quiet
+          git diff --exit-code
