[db-repo] update gorm to 1.23.7;
    - rework CRUD patterns (no reads after create / update)
    - batch support
    - added ctx

--- a/test/db-repo/change_history/config.test.yml
+++ b/test/db-repo/change_history/config.test.yml
@@ -22,3 +22,8 @@ db:
 change_history:
   table_suffix: history_entries
   change_author_column: change_author
+
+test:
+  components:
+    - type: mysql
+      expire_after: 10m
