test: use external mysql container;
 - add configuration options to conntect to a external mysql container
 - rework test components to use map based configuration

--- a/test/cloud/aws/dynamodb/client_test_cfg.yml
+++ b/test/cloud/aws/dynamodb/client_test_cfg.yml
@@ -18,6 +18,6 @@ cloud:
 
 test:
   components:
-    - name: default
-      type: ddb
-      toxiproxy_enabled: true
+    ddb:
+      default:
+        toxiproxy_enabled: true
