--- a/test/stream/retry_handler/config.dist.yml
+++ b/test/stream/retry_handler/config.dist.yml
@@ -19,5 +19,6 @@ stream:
 
 test:
   components:
-    - type: localstack
-      services: sqs
+    localstack:
+      default:
+        services: sqs
