db: added goose migrations;

--- a/test/db-repo/change_history/entity/config.test.yml
+++ b/test/db-repo/change_history/entity/config.test.yml
@@ -9,7 +9,7 @@ db:
     driver: mysql
     migrations:
       enabled: true
-      path: file://./migrations
+      path: ./migrations
       table_prefixed: false
     parse_time: true
     uri:
