--- a/test/db-repo/query/config.test.yml
+++ b/test/db-repo/query/config.test.yml
@@ -18,7 +18,7 @@ db:
     migrations:
       enabled: true
       table_prefixed: false
-      path: file://migrations/
+      path: migrations
 
 change_history:
   table_suffix: history_entries
