--- a/test/db/migration-goose/config.test.yml
+++ b/test/db/migration-goose/config.test.yml
@@ -1,9 +1,7 @@
 env: test
-
 app_project: gosoline
-app_family: test
-app_group: grp
-app_name: guard-test
+app_family: integration-test
+app_name: goose
 
 db:
   default:
@@ -13,12 +11,11 @@ db:
     uri:
       host: 127.0.0.1
       port: 3306
-      user: root
+      user: gosoline
       password: gosoline
-      database: myDbName
+      database: gosoline
     migrations:
       enabled: true
-      table_prefixed: false
       path: migrations
 
 fixtures:
