--- a/test/db/migration-golang-migrate/config.test.yml
+++ b/test/db/migration-golang-migrate/config.test.yml
@@ -1,7 +1,7 @@
 env: test
 app_project: gosoline
 app_family: integration-test
-app_name: db-repo-change-history-test
+app_name: go-migrate
 
 db:
   default:
@@ -16,9 +16,9 @@ db:
       database: gosoline
     migrations:
       enabled: true
+      provider: golang-migrate
       table_prefixed: false
-      path: migrations
+      path: file://migrations/
 
-change_history:
-  table_suffix: history_entries
-  change_author_column: change_author
+fixtures:
+  enabled: true
