--- a/test/db/migration-goose/config.test.yml
+++ b/test/db/migration-goose/config.test.yml
@@ -1,7 +1,7 @@
 env: test
 app_project: gosoline
 app_family: integration-test
-app_name: db-repo-change-history-test
+app_name: goose
 
 db:
   default:
@@ -16,9 +16,8 @@ db:
       database: gosoline
     migrations:
       enabled: true
-      table_prefixed: false
+      provider: goose
       path: migrations
 
-change_history:
-  table_suffix: history_entries
-  change_author_column: change_author
+fixtures:
+  enabled: true
