--- a/test/fixtures/mysql/config.test.yml
+++ b/test/fixtures/mysql/config.test.yml
@@ -17,7 +17,7 @@ db:
     migrations:
       enabled: true
       table_prefixed: false
-      path: file://migrations/
+      path: migrations
 
 fixtures:
   enabled: true
