feat: fix broken link

--- a/.github/workflows/docusaurus-test-deploy.yml
+++ b/.github/workflows/docusaurus-test-deploy.yml
@@ -7,14 +7,16 @@ on:
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
+defaults:
+  run:
+    working-directory: docs
+
 jobs:
   test-deploy:
     name: Test deployment
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use docs folder
-        run: cd docs/
       - uses: actions/setup-node@v3
         with:
           node-version: 18
