all: adjusted tests for Go 1.21;

--- a/examples/more_details/stream-consumer/config.dist.yml
+++ b/examples/more_details/stream-consumer/config.dist.yml
@@ -18,3 +18,9 @@ stream:
     consumerInput:
       type: sqs
       target_queue_id: inputEvent
+
+test:
+  components:
+    s3:
+      default:
+        expire_after: 4m
