--- a/pkg/cfg/testdata/config.strings.test.yml
+++ b/pkg/cfg/testdata/config.strings.test.yml
@@ -31,6 +31,7 @@ test:
       - html: []
         json: [gzip, gzip]
 
-api:
-  port: 80
-  mode: release
+httpserver:
+  default:
+    port: 80
+    mode: release
