--- a/.vale.ini
+++ b/.vale.ini
@@ -5,6 +5,6 @@ Packages = https://github.com/justtrackio/content-style-guide/releases/latest/do
 [formats]
 mdx = md
 
-[*.md]
+[*.{md,mdx}]
 BasedOnStyles = Justtrack
 BlockIgnores = (?s)<Tabs>.*?</Tabs>
