--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -123,7 +123,8 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54.2
-          args: --timeout 5m --print-issued-lines --print-linter-name --disable structcheck --disable unused
+          only-new-issues: true
+          args: -v --timeout 5m --print-issued-lines --print-linter-name
 
   go-test:
     name: go test
