--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Execute terraform fmt -check -recursive .
         run: terraform fmt -check -recursive .
 
-  go-fmt:
-    name: go fmt
+  go-fumpt:
+    name: go fumpt v0.6.0
     runs-on: ubuntu-20.04
     steps:
       - name: Set up Go 1.21
@@ -28,14 +28,17 @@ jobs:
         with:
           go-version: "1.21"
 
+      - name: Setup gofumpt
+        run: go install mvdan.cc/gofumpt@v0.6.0
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
-      - name: Execute gofmt -l .
-        run: gofmt -l .
+      - name: Execute gofumpt -l .
+        run: gofumpt -l .
 
-      - name: Execute test -z $(gofmt -l .)
-        run: test -z $(gofmt -l .)
+      - name: Execute test -z $(gofumpt -l .)
+        run: test -z $(gofumpt -l .)
 
   mockery:
     name: mockery
