fixtures: refactored fixture loading process

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   terraform-fmt:
     name: terraform fmt
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -20,16 +20,16 @@ jobs:
         run: terraform fmt -check -recursive .
 
   go-fumpt:
-    name: go fumpt v0.6.0
-    runs-on: ubuntu-20.04
+    name: go fumpt v0.7.0
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Setup gofumpt
-        run: go install mvdan.cc/gofumpt@v0.6.0
+        run: go install mvdan.cc/gofumpt@v0.7.0
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -42,12 +42,12 @@ jobs:
 
   mockery:
     name: mockery
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -73,12 +73,12 @@ jobs:
 
   build:
     name: go build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -91,12 +91,12 @@ jobs:
 
   go-vet:
     name: static code analysis (go vet)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -109,31 +109,31 @@ jobs:
 
   golangci-lint:
     name: static code analysis (golangci-lint)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
       - name: Static code analysis (golangci-lint)
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.54.2
+          version: v1.59.1
           only-new-issues: true
           args: -v --timeout 5m --print-issued-lines --print-linter-name
 
   go-test:
     name: go test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -146,12 +146,12 @@ jobs:
 
   go-test-race:
     name: go test (race)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -164,12 +164,12 @@ jobs:
 
   go-test-integration:
     name: go test (integration)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -182,12 +182,12 @@ jobs:
 
   go-test-integration-race:
     name: go test (integration, race)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.22"
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
