--- a/.github/workflows/search-index.yml
+++ b/.github/workflows/search-index.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   reindex:
     name: Reindex search
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Clone this repo
         uses: actions/checkout@v4
