log: introduce channel based log levels;

--- a/docs/docs/how-to/logging/src/config-logger/config.dist.yml
+++ b/docs/docs/how-to/logging/src/config-logger/config.dist.yml
@@ -10,7 +10,11 @@ log:
     handlers:
         main:
             type: iowriter
-            channels: []
+            channels:
+                metrics:
+                  level: error
+                formatter:
+                  level: error
             formatter: console
             level: info
             timestamp_format: 15:04:05.000
