gh: add dockerhub authentication for integration test containers

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -169,6 +169,19 @@ jobs:
 
       - name: Integration tests
         run: go test -p 2 --tags='integration,fixtures' ./test/...
+        env:
+          TEST_COMPONENTS_DDB_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_DDB_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_LOCALSTACK_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_LOCALSTACK_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_MYSQL_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_MYSQL_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_REDIS_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_REDIS_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_S3_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_S3_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_WIREMOCK_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_WIREMOCK_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
   go-test-integration-race:
     name: go test (integration, race)
@@ -187,3 +200,16 @@ jobs:
 
       - name: Integration tests (race)
         run: go test -p 2 -race --tags='integration,fixtures' ./test/...
+        env:
+          TEST_COMPONENTS_DDB_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_DDB_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_LOCALSTACK_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_LOCALSTACK_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_MYSQL_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_MYSQL_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_REDIS_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_REDIS_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_S3_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_S3_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          TEST_COMPONENTS_WIREMOCK_DEFAULT_IMAGE_AUTH_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TEST_COMPONENTS_WIREMOCK_DEFAULT_IMAGE_AUTH_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
