kvstore,redis: allow to set redis db index
DB index can be configured like so:
```yaml
kvstore:
  currency:
    type: chain
    elements: [redis]
    redis:
      db: 2
```

--- a/test/fixtures/kvstore/config.test.yml
+++ b/test/fixtures/kvstore/config.test.yml
@@ -12,6 +12,15 @@ kvstore:
   another_test_store:
     type: chain
     elements: [inMemory]
+  redis_test_store:
+    redis:
+      db: 7
+    type: chain
+    elements: [redis]
 
 fixtures:
   enabled: true
+
+redis:
+  default:
+    dialer: tcp
