coffin: made coffin reusable;
TODO: maybe write some release notes here;

--- a/test/db/migration-golang-migrate/config.test.yml
+++ b/test/db/migration-golang-migrate/config.test.yml
@@ -18,7 +18,7 @@ db:
       enabled: true
       provider: golang-migrate
       table_prefixed: false
-      path: file://migrations/
+      path: file://migrations
 
 fixtures:
   enabled: true
