test: add test for multiple blob stores running side-by-side

--- a/test/blob/store_test_cfg.yml
+++ b/test/blob/store_test_cfg.yml
@@ -5,6 +5,12 @@ app_family: fam
 app_group: grp
 app_name: app
 
+blob:
+  default:
+    bucket: default
+  foo:
+    bucket: foo
+
 cloud:
   aws:
     credentials:
