httpserver: moved httpserver to application stage and made it wait for shutdown;
In the past, the httpserver module would run in the service instead of
the application stage. This would cause modules like the GeoIP database
to be shut down at the same time as the server, potentially resulting
requests to access the (now shut down) database and failing to get any
data from it. We now move it to the correct application stage, resulting
in the httpserver to be shut down before the rest. This commit also
fixes a bug where we would not actually wait for all requests to be done
before proceeding with the shutdown.

--- a/test/stream/retry_handler_sqs/config.dist.yml
+++ b/test/stream/retry_handler_sqs/config.dist.yml
@@ -27,6 +27,7 @@ test:
     localstack:
       default:
         services: sqs
+        expire_after: 5m
     streamInput:
       consumer:
         in_memory_override: false
