fix: run kafka consumer test with start offset first to avoid racyness between test setup and consumer start

--- a/test/stream/kafka/consumer/config.dist.yml
+++ b/test/stream/kafka/consumer/config.dist.yml
@@ -20,6 +20,7 @@ stream:
       group: test
       topic_id: testEvent
       group_id: testEvent
+      start_offset: first
       in_memory_override: false
 
 test:
