log: fingers crossed handling;

--- a/docs/docs/how-to/logging/src/config-logger/config.dist.yml
+++ b/docs/docs/how-to/logging/src/config-logger/config.dist.yml
@@ -13,7 +13,7 @@ log:
             channels:
                 metrics:
                     level: error
-                formatter:
+                http:
                     level: error
             formatter: console
             level: info
