--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -12,34 +12,88 @@ defaults:
 
 jobs:
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: '**/package-lock.json'
+          node-version: 20
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
+
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
+
       - name: Build
-        run: npm run build
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        run: yarn build
+
+      - name: Deploy to gh-pages branch
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          path: docs/build
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/build
+          publish_branch: gh-pages
+          keep_files: true  # Prevents wiping pr-* folders
+          exclude_assets: '.nojekyll'
+
+  deploy-manual:
+    runs-on: ubuntu-latest
+    needs: []
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Build
+        run: yarn build
+
+      - name: Deploy to gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Configure git
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Clone gh-pages branch to a temporary location
+          git clone --branch gh-pages --single-branch https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git ../gh-pages-deploy
+          
+          # Prepare target directory
+          cd ../gh-pages-deploy
+          
+          # Remove everything in root EXCEPT .git and directories starting with pr-
+          # find . -maxdepth 1 ! -name 'pr-*' ! -name '.git' ! -name '.' -exec rm -rf {} +
+          # The above find command is tricky. Let's be explicit.
+          
+          # List all files/dirs in current dir
+          for item in *; do
+            if [[ "$item" == pr-* ]]; then
+              echo "Preserving preview: $item"
+            else
+              echo "Deleting old main content: $item"
+              rm -rf "$item"
+            fi
+          done
+          
+          # Copy new build files to root
+          cp -r $GITHUB_WORKSPACE/docs/build/* .
+          
+          # Add, commit, push
+          git add .
+          git commit -m "Deploy to GitHub Pages from ${{ github.sha }}" || echo "No changes to commit"
+          git push origin gh-pages
 
 permissions:
-  id-token: write
-  contents: read
-  pages: write
+  contents: write
