--- a/.github/workflows/docusaurus-test.yml
+++ b/.github/workflows/docusaurus-test.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: '**/package-lock.json'
+          node-version: 20
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Build
-        run: npm run build
+        run: yarn build
